# bm42-embed

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
.run/: API.run.xml
