[project]
name = "bm42-embed"
version = "v0.2.2"
urls = { "homepage" = "https://github.com/joanfabregat/bm42-embed" }
description = "An API to generate Qdrant's BM42 sparse embeddings"
authors = [
    { name = "Joan Fabrégat", email = "jfabregat@fogandfrog.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "fastembed>=0.6.0",
]


[dependency-groups]
gpu = [
    "fastembed-gpu>=0.6.0",
]